--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<title>10543001</title>
 </head>
 <style>
-	body {background-color: #FFFFA1;}
-	#b1{background-color: #DB0000;}
-	#b2{background-color: #1AFF19;}
-	#b3{background-color: #00DBDB;}
+	body {background-color: #FFC9C9;}
+	#b1{background-color: #E6E600;}
+	#b2{background-color: #0000DB;}
+	#b3{background-color: #7C00D6;}
 
 </style>
 
